// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alpine tests should correctly analyze an alpine image by sha256 1`] = `
{
  "scanResults": [
    {
      "facts": [
        {
          "data": {
            "graph": {
              "nodes": [
                {
                  "deps": [
                    {
                      "nodeId": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                    },
                    {
                      "nodeId": "alpine-keys/alpine-keys@2.1-r1",
                    },
                    {
                      "nodeId": "apk-tools/apk-tools@2.10.1-r0",
                    },
                    {
                      "nodeId": "busybox/busybox@1.27.2-r11|2",
                    },
                    {
                      "nodeId": "busybox/ssl_client@1.27.2-r11",
                    },
                    {
                      "nodeId": "libc-dev/libc-utils@0.7.1-r0",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|2",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|2",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|2",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                    {
                      "nodeId": "musl/musl-utils@1.1.18-r3|2",
                    },
                    {
                      "nodeId": "pax-utils/scanelf@1.2.2-r1|2",
                    },
                    {
                      "nodeId": "zlib/zlib@1.2.11-r1|2",
                    },
                  ],
                  "nodeId": "root-node",
                  "pkgId": "docker-image|alpine@",
                },
                {
                  "deps": [],
                  "nodeId": "busybox/busybox@1.27.2-r11|1",
                  "pkgId": "busybox/busybox@1.27.2-r11",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "busybox/busybox@1.27.2-r11|2",
                  "pkgId": "busybox/busybox@1.27.2-r11",
                },
                {
                  "deps": [],
                  "nodeId": "musl/musl@1.1.18-r3",
                  "pkgId": "musl/musl@1.1.18-r3",
                },
                {
                  "deps": [
                    {
                      "nodeId": "busybox/busybox@1.27.2-r11|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                  "pkgId": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                },
                {
                  "deps": [],
                  "nodeId": "alpine-keys/alpine-keys@2.1-r1",
                  "pkgId": "alpine-keys/alpine-keys@2.1-r1",
                },
                {
                  "deps": [],
                  "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                  "pkgId": "libressl/libressl2.6-libcrypto@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|2",
                  "pkgId": "libressl/libressl2.6-libcrypto@2.6.5-r0",
                },
                {
                  "deps": [],
                  "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|1",
                  "pkgId": "libressl/libressl2.6-libssl@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|2",
                  "pkgId": "libressl/libressl2.6-libssl@2.6.5-r0",
                },
                {
                  "deps": [],
                  "nodeId": "zlib/zlib@1.2.11-r1|1",
                  "pkgId": "zlib/zlib@1.2.11-r1",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "zlib/zlib@1.2.11-r1|2",
                  "pkgId": "zlib/zlib@1.2.11-r1",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                    {
                      "nodeId": "zlib/zlib@1.2.11-r1|1",
                    },
                  ],
                  "nodeId": "apk-tools/apk-tools@2.10.1-r0",
                  "pkgId": "apk-tools/apk-tools@2.10.1-r0",
                },
                {
                  "deps": [],
                  "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|1",
                  "pkgId": "libressl/libressl2.6-libtls@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|2",
                  "pkgId": "libressl/libressl2.6-libtls@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "busybox/ssl_client@1.27.2-r11",
                  "pkgId": "busybox/ssl_client@1.27.2-r11",
                },
                {
                  "deps": [],
                  "nodeId": "musl/musl-utils@1.1.18-r3|1",
                  "pkgId": "musl/musl-utils@1.1.18-r3",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                    {
                      "nodeId": "pax-utils/scanelf@1.2.2-r1|1",
                    },
                  ],
                  "nodeId": "musl/musl-utils@1.1.18-r3|2",
                  "pkgId": "musl/musl-utils@1.1.18-r3",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl-utils@1.1.18-r3|1",
                    },
                  ],
                  "nodeId": "libc-dev/libc-utils@0.7.1-r0",
                  "pkgId": "libc-dev/libc-utils@0.7.1-r0",
                },
                {
                  "deps": [],
                  "nodeId": "pax-utils/scanelf@1.2.2-r1|1",
                  "pkgId": "pax-utils/scanelf@1.2.2-r1",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "pax-utils/scanelf@1.2.2-r1|2",
                  "pkgId": "pax-utils/scanelf@1.2.2-r1",
                },
              ],
              "rootNodeId": "root-node",
            },
            "pkgManager": {
              "name": "apk",
              "repositories": [
                {
                  "alias": "alpine:3.7.3",
                },
              ],
            },
            "pkgs": [
              {
                "id": "docker-image|alpine@",
                "info": {
                  "name": "docker-image|alpine",
                  "version": undefined,
                },
              },
              {
                "id": "busybox/busybox@1.27.2-r11",
                "info": {
                  "name": "busybox/busybox",
                  "version": "1.27.2-r11",
                },
              },
              {
                "id": "musl/musl@1.1.18-r3",
                "info": {
                  "name": "musl/musl",
                  "version": "1.1.18-r3",
                },
              },
              {
                "id": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                "info": {
                  "name": "alpine-baselayout/alpine-baselayout",
                  "version": "3.0.5-r2",
                },
              },
              {
                "id": "alpine-keys/alpine-keys@2.1-r1",
                "info": {
                  "name": "alpine-keys/alpine-keys",
                  "version": "2.1-r1",
                },
              },
              {
                "id": "libressl/libressl2.6-libcrypto@2.6.5-r0",
                "info": {
                  "name": "libressl/libressl2.6-libcrypto",
                  "version": "2.6.5-r0",
                },
              },
              {
                "id": "libressl/libressl2.6-libssl@2.6.5-r0",
                "info": {
                  "name": "libressl/libressl2.6-libssl",
                  "version": "2.6.5-r0",
                },
              },
              {
                "id": "zlib/zlib@1.2.11-r1",
                "info": {
                  "name": "zlib/zlib",
                  "version": "1.2.11-r1",
                },
              },
              {
                "id": "apk-tools/apk-tools@2.10.1-r0",
                "info": {
                  "name": "apk-tools/apk-tools",
                  "version": "2.10.1-r0",
                },
              },
              {
                "id": "libressl/libressl2.6-libtls@2.6.5-r0",
                "info": {
                  "name": "libressl/libressl2.6-libtls",
                  "version": "2.6.5-r0",
                },
              },
              {
                "id": "busybox/ssl_client@1.27.2-r11",
                "info": {
                  "name": "busybox/ssl_client",
                  "version": "1.27.2-r11",
                },
              },
              {
                "id": "musl/musl-utils@1.1.18-r3",
                "info": {
                  "name": "musl/musl-utils",
                  "version": "1.1.18-r3",
                },
              },
              {
                "id": "libc-dev/libc-utils@0.7.1-r0",
                "info": {
                  "name": "libc-dev/libc-utils",
                  "version": "0.7.1-r0",
                },
              },
              {
                "id": "pax-utils/scanelf@1.2.2-r1",
                "info": {
                  "name": "pax-utils/scanelf",
                  "version": "1.2.2-r1",
                },
              },
            ],
            "schemaVersion": "1.3.0",
          },
          "type": "depGraph",
        },
        {
          "data": "sha256:6d1ef012b5674ad8a127ecfa9b5e6f5178d171b90ee462846974177fd9bdd39f",
          "type": "imageId",
        },
        {
          "data": [
            "sha256:3fc64803ca2de7279269048fe2b8b3c73d4536448c87c32375b2639ac168a48b",
          ],
          "type": "imageLayers",
        },
        {
          "data": {
            "argsEscaped": true,
            "cmd": [
              "/bin/sh",
            ],
            "entrypoint": null,
            "env": [
              "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
            ],
            "user": "",
            "volumes": null,
            "workingDir": "",
          },
          "type": "containerConfig",
        },
        {
          "data": [
            {
              "created": "2019-03-07T22:19:53.313789681Z",
              "createdBy": "/bin/sh -c #(nop) ADD file:aa17928040e31624cad9c7ed19ac277c5402c4b9ba39f834250affca40c4046e in / ",
            },
            {
              "created": "2019-03-07T22:19:53.447205048Z",
              "createdBy": "/bin/sh -c #(nop)  CMD ["/bin/sh"]",
              "emptyLayer": true,
            },
          ],
          "type": "history",
        },
        {
          "data": "2019-03-07T22:19:53.447205048Z",
          "type": "imageCreationTime",
        },
        {
          "data": [
            "sha256:3fc64803ca2de7279269048fe2b8b3c73d4536448c87c32375b2639ac168a48b",
          ],
          "type": "rootFs",
        },
        {
          "data": "Alpine Linux v3.7",
          "type": "imageOsReleasePrettyName",
        },
        {
          "data": {
            "names": [
              "alpine@sha256:92251458088c638061cda8fd8b403b76d661a4dc6b7ee71b6affcf1872557b2b",
            ],
          },
          "type": "imageNames",
        },
        {
          "data": "linux/amd64",
          "type": "platform",
        },
        {
          "data": "0.0.0-local",
          "type": "pluginVersion",
        },
      ],
      "identity": {
        "args": {
          "platform": "linux/amd64",
        },
        "type": "apk",
      },
      "target": {
        "image": "docker-image|alpine",
      },
    },
  ],
}
`;

exports[`alpine tests should correctly analyze an alpine image by tag 1`] = `
{
  "scanResults": [
    {
      "facts": [
        {
          "data": {
            "graph": {
              "nodes": [
                {
                  "deps": [
                    {
                      "nodeId": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                    },
                    {
                      "nodeId": "alpine-keys/alpine-keys@2.1-r1",
                    },
                    {
                      "nodeId": "apk-tools/apk-tools@2.10.1-r0",
                    },
                    {
                      "nodeId": "busybox/busybox@1.27.2-r11|2",
                    },
                    {
                      "nodeId": "busybox/ssl_client@1.27.2-r11",
                    },
                    {
                      "nodeId": "libc-dev/libc-utils@0.7.1-r0",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|2",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|2",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|2",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                    {
                      "nodeId": "musl/musl-utils@1.1.18-r3|2",
                    },
                    {
                      "nodeId": "pax-utils/scanelf@1.2.2-r1|2",
                    },
                    {
                      "nodeId": "zlib/zlib@1.2.11-r1|2",
                    },
                  ],
                  "nodeId": "root-node",
                  "pkgId": "docker-image|alpine@3.7.3",
                },
                {
                  "deps": [],
                  "nodeId": "busybox/busybox@1.27.2-r11|1",
                  "pkgId": "busybox/busybox@1.27.2-r11",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "busybox/busybox@1.27.2-r11|2",
                  "pkgId": "busybox/busybox@1.27.2-r11",
                },
                {
                  "deps": [],
                  "nodeId": "musl/musl@1.1.18-r3",
                  "pkgId": "musl/musl@1.1.18-r3",
                },
                {
                  "deps": [
                    {
                      "nodeId": "busybox/busybox@1.27.2-r11|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                  "pkgId": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                },
                {
                  "deps": [],
                  "nodeId": "alpine-keys/alpine-keys@2.1-r1",
                  "pkgId": "alpine-keys/alpine-keys@2.1-r1",
                },
                {
                  "deps": [],
                  "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                  "pkgId": "libressl/libressl2.6-libcrypto@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|2",
                  "pkgId": "libressl/libressl2.6-libcrypto@2.6.5-r0",
                },
                {
                  "deps": [],
                  "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|1",
                  "pkgId": "libressl/libressl2.6-libssl@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|2",
                  "pkgId": "libressl/libressl2.6-libssl@2.6.5-r0",
                },
                {
                  "deps": [],
                  "nodeId": "zlib/zlib@1.2.11-r1|1",
                  "pkgId": "zlib/zlib@1.2.11-r1",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "zlib/zlib@1.2.11-r1|2",
                  "pkgId": "zlib/zlib@1.2.11-r1",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                    {
                      "nodeId": "zlib/zlib@1.2.11-r1|1",
                    },
                  ],
                  "nodeId": "apk-tools/apk-tools@2.10.1-r0",
                  "pkgId": "apk-tools/apk-tools@2.10.1-r0",
                },
                {
                  "deps": [],
                  "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|1",
                  "pkgId": "libressl/libressl2.6-libtls@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libcrypto@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "libressl/libressl2.6-libssl@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|2",
                  "pkgId": "libressl/libressl2.6-libtls@2.6.5-r0",
                },
                {
                  "deps": [
                    {
                      "nodeId": "libressl/libressl2.6-libtls@2.6.5-r0|1",
                    },
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "busybox/ssl_client@1.27.2-r11",
                  "pkgId": "busybox/ssl_client@1.27.2-r11",
                },
                {
                  "deps": [],
                  "nodeId": "musl/musl-utils@1.1.18-r3|1",
                  "pkgId": "musl/musl-utils@1.1.18-r3",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                    {
                      "nodeId": "pax-utils/scanelf@1.2.2-r1|1",
                    },
                  ],
                  "nodeId": "musl/musl-utils@1.1.18-r3|2",
                  "pkgId": "musl/musl-utils@1.1.18-r3",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl-utils@1.1.18-r3|1",
                    },
                  ],
                  "nodeId": "libc-dev/libc-utils@0.7.1-r0",
                  "pkgId": "libc-dev/libc-utils@0.7.1-r0",
                },
                {
                  "deps": [],
                  "nodeId": "pax-utils/scanelf@1.2.2-r1|1",
                  "pkgId": "pax-utils/scanelf@1.2.2-r1",
                },
                {
                  "deps": [
                    {
                      "nodeId": "musl/musl@1.1.18-r3",
                    },
                  ],
                  "nodeId": "pax-utils/scanelf@1.2.2-r1|2",
                  "pkgId": "pax-utils/scanelf@1.2.2-r1",
                },
              ],
              "rootNodeId": "root-node",
            },
            "pkgManager": {
              "name": "apk",
              "repositories": [
                {
                  "alias": "alpine:3.7.3",
                },
              ],
            },
            "pkgs": [
              {
                "id": "docker-image|alpine@3.7.3",
                "info": {
                  "name": "docker-image|alpine",
                  "version": "3.7.3",
                },
              },
              {
                "id": "busybox/busybox@1.27.2-r11",
                "info": {
                  "name": "busybox/busybox",
                  "version": "1.27.2-r11",
                },
              },
              {
                "id": "musl/musl@1.1.18-r3",
                "info": {
                  "name": "musl/musl",
                  "version": "1.1.18-r3",
                },
              },
              {
                "id": "alpine-baselayout/alpine-baselayout@3.0.5-r2",
                "info": {
                  "name": "alpine-baselayout/alpine-baselayout",
                  "version": "3.0.5-r2",
                },
              },
              {
                "id": "alpine-keys/alpine-keys@2.1-r1",
                "info": {
                  "name": "alpine-keys/alpine-keys",
                  "version": "2.1-r1",
                },
              },
              {
                "id": "libressl/libressl2.6-libcrypto@2.6.5-r0",
                "info": {
                  "name": "libressl/libressl2.6-libcrypto",
                  "version": "2.6.5-r0",
                },
              },
              {
                "id": "libressl/libressl2.6-libssl@2.6.5-r0",
                "info": {
                  "name": "libressl/libressl2.6-libssl",
                  "version": "2.6.5-r0",
                },
              },
              {
                "id": "zlib/zlib@1.2.11-r1",
                "info": {
                  "name": "zlib/zlib",
                  "version": "1.2.11-r1",
                },
              },
              {
                "id": "apk-tools/apk-tools@2.10.1-r0",
                "info": {
                  "name": "apk-tools/apk-tools",
                  "version": "2.10.1-r0",
                },
              },
              {
                "id": "libressl/libressl2.6-libtls@2.6.5-r0",
                "info": {
                  "name": "libressl/libressl2.6-libtls",
                  "version": "2.6.5-r0",
                },
              },
              {
                "id": "busybox/ssl_client@1.27.2-r11",
                "info": {
                  "name": "busybox/ssl_client",
                  "version": "1.27.2-r11",
                },
              },
              {
                "id": "musl/musl-utils@1.1.18-r3",
                "info": {
                  "name": "musl/musl-utils",
                  "version": "1.1.18-r3",
                },
              },
              {
                "id": "libc-dev/libc-utils@0.7.1-r0",
                "info": {
                  "name": "libc-dev/libc-utils",
                  "version": "0.7.1-r0",
                },
              },
              {
                "id": "pax-utils/scanelf@1.2.2-r1",
                "info": {
                  "name": "pax-utils/scanelf",
                  "version": "1.2.2-r1",
                },
              },
            ],
            "schemaVersion": "1.3.0",
          },
          "type": "depGraph",
        },
        {
          "data": "sha256:6d1ef012b5674ad8a127ecfa9b5e6f5178d171b90ee462846974177fd9bdd39f",
          "type": "imageId",
        },
        {
          "data": [
            "sha256:3fc64803ca2de7279269048fe2b8b3c73d4536448c87c32375b2639ac168a48b",
          ],
          "type": "imageLayers",
        },
        {
          "data": {
            "argsEscaped": true,
            "cmd": [
              "/bin/sh",
            ],
            "entrypoint": null,
            "env": [
              "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
            ],
            "user": "",
            "volumes": null,
            "workingDir": "",
          },
          "type": "containerConfig",
        },
        {
          "data": [
            {
              "created": "2019-03-07T22:19:53.313789681Z",
              "createdBy": "/bin/sh -c #(nop) ADD file:aa17928040e31624cad9c7ed19ac277c5402c4b9ba39f834250affca40c4046e in / ",
            },
            {
              "created": "2019-03-07T22:19:53.447205048Z",
              "createdBy": "/bin/sh -c #(nop)  CMD ["/bin/sh"]",
              "emptyLayer": true,
            },
          ],
          "type": "history",
        },
        {
          "data": "2019-03-07T22:19:53.447205048Z",
          "type": "imageCreationTime",
        },
        {
          "data": [
            "sha256:3fc64803ca2de7279269048fe2b8b3c73d4536448c87c32375b2639ac168a48b",
          ],
          "type": "rootFs",
        },
        {
          "data": "Alpine Linux v3.7",
          "type": "imageOsReleasePrettyName",
        },
        {
          "data": {
            "names": [
              "alpine:3.7.3",
            ],
          },
          "type": "imageNames",
        },
        {
          "data": "linux/amd64",
          "type": "platform",
        },
        {
          "data": "0.0.0-local",
          "type": "pluginVersion",
        },
      ],
      "identity": {
        "args": {
          "platform": "linux/amd64",
        },
        "type": "apk",
      },
      "target": {
        "image": "docker-image|alpine",
      },
    },
  ],
}
`;
